# full-stack-django

./: LICENSE  README.md
backend/: backend.dockerfile  pyproject.toml  start-services.sh
backend/deploy/: gunicorn.conf.py  supervisor.ini
backend/src/: __init__.py
backend/src/config/: asgi.py  routing.py  schema.py  urls.py
backend/src/config/settings/: __init__.py  base.py
